test_regress/t/t_tri_hier_ref_unsup.out
%Error-UNSUPPORTED: t/t_tri_hier_ref_unsup.v:34:17: Unsupported tristate construct: hierarchical driver of non-interface tri signal: 'bus'
                                                  : ... note: In instance 't'
   34 |    assign u_sub.bus = hier_we ? 8'hBB : 8'hzz;
      |                 ^~~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error-UNSUPPORTED: t/t_tri_hier_ref_unsup.v:23:14: Unsupported tristate construct (in graph; not converted): VAR 'bus'
                                                  : ... note: In instance 't.u_sub'
   23 |    tri [7:0] bus;
      |              ^~~
%Error: Exiting due to
